--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^8.6.2",
+    "gh-pages": "^3.2.0",
     "nodemailer": "^6.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -20,7 +21,6 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:8888"
 }
