--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "firebase": "^8.6.2",
     "gh-pages": "^3.2.0",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
